--- a/project_ch02/ch02.md
+++ b/project_ch02/ch02.md
@@ -1,2 +1,22 @@
 # 챕터 02
-그레이들을 이용해 처음으로 스프링 컨테이너 사용해보는 간단한 프로젝트
+그레이들을 이용해 스프링 프로젝트를 빌드하고 처음으로 스프링 컨테이너 활용한 예제 작성
+
+## 그레이들 사용법
+1. 프로젝트 파일을 구성한 뒤 build.gradle 파일 작성
+    - 파일 안에 gradle wrapper 파일을 만드는 내용 필요: 래퍼를 활용해 프로젝트만 다운받아서 그레이들 명령 수행 가능
+2. ./gradlew build
+    - build.gradle의 내용을 기반으로 프로젝트 빌드(컴파일을 포함해서 실행 직전까지의 과정)
+3. ./gradlew run 
+    - 아래 내용을 build.gradle에 작성해야 run 태스크 실행 가능
+```groovy
+apply.plugin: 'application'
+mainClassName = '클래스 이름'
+```
+
+## 스프링 컨테이너
+- (간단히)객체를 생성하고 초기화하는 역할을 클래스
+- 스프링 컨테이너가 생성하고 초기화하는 객체를 빈 객체라고 함
+- 스프링 컨테이너는 `@Configuration` 어노테이션이 적용된 클래스, 즉 설정 클래스의 정보를 기반으로 객체 관리
+- 설정 클래스에는 `@Bean` 어노테이션이 적용된 게터 메소드가 있고, 이들이 반환하는 객체가 바로 빈임
+- 스프링 컨테이너는 빈이 중복되지 않도록 관리함. 예를 들어 스프링 컨테이너에서 a라는 이름의 빈은 무조건 하나만 존재(a는 싱글톤 범위를 가짐)
+_스프링 컨테이너가 `@Bean` 어노테이션이 적용된 게터 메소드를 호출하여 빈을 생성 및 초기화하고 이를 관리_
