--- a/project_ch02/ch02.md
+++ b/project_ch02/ch02.md
@@ -2,11 +2,11 @@
 그레이들을 이용해 스프링 프로젝트를 빌드하고 처음으로 스프링 컨테이너 활용한 예제 작성
 
 ## 그레이들 사용법
-1. 프로젝트 파일을 구성한 뒤 build.gradle 파일 작성
+1. 프로젝트 파일을 구성한 뒤 build.gradle 파일 작성<br>
     - 파일 안에 gradle wrapper 파일을 만드는 내용 필요: 래퍼를 활용해 프로젝트만 다운받아서 그레이들 명령 수행 가능
-2. ./gradlew build
+2. 프로젝트 루트 위치의 터미널에서 `./gradlew build` 실행<br>
     - build.gradle의 내용을 기반으로 프로젝트 빌드(컴파일을 포함해서 실행 직전까지의 과정)
-3. ./gradlew run 
+3. `./gradlew run` 실행<br>
     - 아래 내용을 build.gradle에 작성해야 run 태스크 실행 가능
 ```groovy
 apply.plugin: 'application'
