--- a/project_ch02/ch02.md
+++ b/project_ch02/ch02.md
@@ -19,4 +19,4 @@ mainClassName = '클래스 이름'
 - 스프링 컨테이너는 `@Configuration` 어노테이션이 적용된 클래스, 즉 설정 클래스의 정보를 기반으로 객체 관리
 - 설정 클래스에는 `@Bean` 어노테이션이 적용된 게터 메소드가 있고, 이들이 반환하는 객체가 바로 빈임
 - 스프링 컨테이너는 빈이 중복되지 않도록 관리함. 예를 들어 스프링 컨테이너에서 a라는 이름의 빈은 무조건 하나만 존재(a는 싱글톤 범위를 가짐)
-_스프링 컨테이너가 `@Bean` 어노테이션이 적용된 게터 메소드를 호출하여 빈을 생성 및 초기화하고 이를 관리_
+_스프링 컨테이너가_ `@Bean` _어노테이션이 적용된 게터 메소드를 호출하여 빈을 생성 및 초기화하고 이를 관리_
