--- a/project_ch05/ch05.md
+++ b/project_ch05/ch05.md
@@ -7,4 +7,47 @@
 
 ## 스캔 대상 지정
 - `@Component` 어노테이션을 붙인 클래스가 스캔 대상이 됨
-- 
+- 어노테이션에 전달한 String 값으로 빈 이름 설정 가능
+  - 값 미전달시 클래스 이름의 첫 글자를 소문자로 바꾼 이름을 빈 이름으로 사용
+
+## 스캔한 클래스 등록
+- 설정 클래스에 `@ComponentScan` 어노테이션을 붙여 컴포넌트 스캔 가능
+- 어노테이션의 basePackages 속성값을 설정해 스캔 대상 패키지 목록 지정
+  - 값으로 전달한 String 배열의 원소값에 해당하는 패키지와 그 하위 패키지 내의 클래스를 스캔 대상으로 설정
+
+## 스캔 대상에서 제외
+`@ComponentScan`의 excludeFilters 속성을 통해 조건을 지정하면, 조건에 해당하는 대상을 스캔 대상에서 제외
+- 속성값으로는 `@Filter`라는 어노테이션을 사용해야 함
+- 여러 조건을 지정하기 위해 @Filter 목록을 배열 형태로 전달할 수 있음
+### Filter 어노테이션 활용
+`@Filter`의 type 속성값으로 아래 열거체 전달
+- `FilterType.REGEX`
+  - 정규표현식을 사용해 대상 지정
+  - pattern 속성에 정규표현식 값 전달
+- `FilterType.ASPECTJ`
+  - AspectJ 패턴을 사용해 대상 지정
+  - pattern 속성에 AspectJ 패턴값 전달
+- `FilterType.ANNOTATION`
+  - 어노테이션이 붙은 대상을 지정
+  - classes 속성을 통해 어노테이션 목록 지정 가능
+- `FilterType.ASSIGNABLE_TYPE`
+  - 특정 클래스를 대상으로 지정
+  - classes 속성을 통해 클래스 목록 지정 가능
+
+## 기본 스캔 대상
+- `@Component`
+- `@Controller`
+- `@Service`
+- `@Repository`
+- `@Aspect`
+- `@Configuration`
+
+`@Aspect`를 제외한 나머지 어노테이션은 `@Component`에 대한 특수 어노테이션
+
+## 컴포넌트 스캔시 충돌
+### 빈 이름 충돌
+- 타입이 다르지만 같은 빈 이름을 사용하는 경우, 둘 중 하나의 빈 이름을 변경해야 함
+  - 변경 안하면 예외 발생(BeanDefinitionStoreException)
+### 수동 등록한 빈과 충돌
+- 하나의 클래스를 `@Bean`으로 수동 등록함과 동시에 컴포넌트 스캔을 통해 등록한 경우
+  - **수동 등록한 빈**이 설정 클래스에 우선적으로 등록(1개의 빈만 등록)
